--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block banner %}
+    <h2>Welcome to Dan's Chatting Extravaganza!</h2>
+{% endblock %}
+
 {% block body %}
 
 {% if message %}
