--- a/templates/home.html
+++ b/templates/home.html
@@ -7,15 +7,20 @@
 {% block body %}
 
 {% if chat_list %}
-    {% for c in chat_list %}
-        <a href="{{ c.name }}">{{ c.name }}</a>
-        {% if c.user_id == user.id %}
-            <form action="" method="post">
-                <button name="{{ c.name }}" value="{{ c.name }}">Delete</button>
-            </form>
-        {% endif %}
-        <br>
-    {% endfor %}
+    <table>
+        {% for c in chat_list %}
+            <tr>       
+                <td><a href="{{ c.name }}">{{ c.name }}</a></td>
+                {% if c.user_id == user.id %}
+                    <td>
+                        <form action="" method="post">
+                            <button name="{{ c.name }}" value="{{ c.name }}">Delete</button>
+                        </form>
+                    </td>
+                {% endif %}
+            </tr>
+        {% endfor %}
+    </table>
 {% else %}
     <h2>No chats sadly</h2>
 {% endif %}
