Forgot the title of Dan's Chatting Extravaganza

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>"a"</title>
+        <title>Dan's Chatting Extravaganza!</title>
 
         <script type="text/javascript">
 
